# cern-migration-cycle

./: .gitignore  .gitlab-ci.yml  .stestr.conf  Makefile.koji  README.md  migration-cycle.spec  migration_cycle.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
migration_cycle/: .coveragerc  global_vars.py  migration_cycle.py  migration_manager.py  migration_stats.py  monit_utils.py  test_migration_cycle.py  utils.py
migration_cycle/tests/: test_migration.py  test_migration_cycle.py  test_migration_manager.py  test_migration_stats.py  test_utils.py
