# Copyright (c) 2021, CERN
# This software is distributed under the terms of the Apache License, Version 2.0,
# copied verbatim in the file "LICENSE".
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as Intergovernmental Organization
# or submit itself to any jurisdiction.

[metadata]
name = migration-cycle
summary = migration cycle migrates VMS from one host to another host
description-file =
    README.md
author = Cloud Infrastructure Team
author-email = cloud-infrastructure-3rd-level@cern.ch
home-page = http://www.cern.ch/openstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    migration_cycle


[entry_points]
console_scripts =
    migration_cycle            = migration_cycle.migration_cycle:main
    migration_manager          = migration_cycle.migration_manager:main
